--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
     <h2>Con Santander tenés ahorros y beneficios</h2>
 
     <hr>
+
+    <div class="container">
+        <div class="caja-de-cards">
+            <div class="container2">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card invisible">5</div>
+                <div class="card">6</div>
+            </div>
+            <div class="card sorpresa">4</div>
+        </div>
+    </div>
 </body>
 </html>
